# GmSSL-android

./: .gitignore  README.md  more.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/megvii/gm_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: custCert.cer  private_key.pem  public_key.pem
app/src/main/java/com/megvii/gm_android/: MainActivity.java
app/src/main/java/com/megvii/gm_android/envelop/: EncryptedContentInfo.java  EnvelopData.java  RecipientInfo.java
app/src/main/java/com/megvii/gm_android/utils/: AssetsUtil.java  FileUtils.java  TransformUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/megvii/gm_android/: ExampleUnitTest.java
gmlib/: build.gradle
gmlib/src/androidTest/java/com/megvii/gmlib/: ExampleInstrumentedTest.java
gmlib/src/main/: AndroidManifest.xml
gmlib/src/main/cpp/: CMakeLists.txt  GmSSL.c  GmSSL.cpp
gmlib/src/main/cpp/gm_include/arm64-v8a/openssl/: opensslconf.h
gmlib/src/main/cpp/gm_include/openssl/: opensslconf.h
gmlib/src/main/java/com/megvii/gmlib/: GmSSL.java
gmlib/src/test/java/com/megvii/gmlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
